[tool.poetry]
name = "hyperparams"
version = "0.1.0"
description = "Declare, manage, and use your hyperparameters in style!"
authors = ["Oleh Lokshyn <olokshyn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
